fixed hier ajd thumb buttons on ie11

--- a/src/mrs/static/sass/index.sass
+++ b/src/mrs/static/sass/index.sass
@@ -166,6 +166,10 @@
       h3
         +faustina-bold-italic()
         margin: 0
+        display: flex
+        height: 4rem
+        align-items: center
+
 
     .hier--wrapper h3 span, .ajd--wrapper h3 span
       +button(white)
@@ -175,7 +179,6 @@
       padding-top: 0
       padding-bottom: 0
       font-weight: bold
-      display: initial!important
 
     .ajd--wrapper
       @media (min-width: $desktop-min-width)
